--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,11 @@
             name="description"
             content="Mozaicos Artesanales Nava"
         />
-        <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+        <meta http-equiv="Content-Security-Policy" content="object-src 'none';" />
+        <meta http-equiv="Content-Security-Policy" content="img-src data: 'self';" />
+        <meta http-equiv="Content-Security-Policy" content="script-src 'self';"/>
+        <meta http-equiv="Content-Security-Policy" content="style-src 'self' %REACT_APP_CSP%;" />
+        
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <title>Mozaicos Artesanales Nava</title>
     </head>
