Se agregan trusted types en webpack

--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,18 @@
 <html lang="es">
     <head>
         <meta charset="utf-8" />
+        <meta name="description" content="Pisos Artesanales Nava" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta
-            name="description"
-            content="Mozaicos Artesanales Nava"
-        />
+        <meta http-equiv="Content-Security-Policy" content="require-trusted-types-for 'script'" />
         
-        <title>Mozaicos Artesanales Nava</title>
+        <title>Pisos Artesanales Nava</title>
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     </head>
     <body>
         <noscript>Se require Javascript.</noscript>
-        <div id="root"></div>
+        <main>
+            <div id="root"></div>
+        </main>
     </body>
 </html>
